// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.testing;

option java_package = "org.wfanet.measurement.internal.testing";
option java_multiple_files = true;

// Blob storage which is forwarded over gRPC.
service ForwardedStorage {
  rpc WriteBlob(stream WriteBlobRequest) returns (BlobMetadata) {}
  rpc GetBlobMetadata(GetBlobMetadataRequest) returns (BlobMetadata) {}
  rpc ReadBlob(ReadBlobRequest) returns (stream ReadBlobResponse) {}
  rpc DeleteBlob(DeleteBlobRequest) returns (DeleteBlobResponse) {}
  // List file and folder names.
  //
  // The prefix option filters out the file or folder names that do not match
  // the prefix. The delimiter option (e.g. "/") are used with prefix to
  // emulate hierarchy. When delimiter option is specified, the function
  // returns full blob name for items that are directly under the current
  // prefix and do not contain an instance of the delimiter after the prefix
  // part.
  //
  rpc ListBlobNames(ListBlobNamesRequest) returns (ListBlobNamesResponse) {}
}

message BlobMetadata {
  int64 size = 1;
}

message WriteBlobRequest {
  message Header {
    string blob_key = 1;
  }
  message BodyChunk {
    bytes content = 1;
  }

  oneof message {
    Header header = 1;
    BodyChunk body_chunk = 2;
  }
}

message GetBlobMetadataRequest {
  string blob_key = 1;
}

message ReadBlobRequest {
  string blob_key = 1;
}

message ReadBlobResponse {
  bytes chunk = 1;
}

message DeleteBlobRequest {
  string blob_key = 1;
}

message DeleteBlobResponse {
  // Deliberately empty
}

message ListBlobNamesRequest {
  // Required
  string prefix = 1;
  string delimiter = 2;
}

message ListBlobNamesResponse {
  repeated string blob_names = 1;
}
