// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package org.wfa.measurement.storage.testing;

option java_package = "org.wfanet.measurement.storage.testing";
option java_multiple_files = true;

message ComplexMessage {
  enum Enum {
    STATE_UNKNOWN = 0;
    STATE_1 = 1;
    STATE_2 = 2;
  }
  message SubMessage {
    repeated int32 field1 = 1;
    Enum field2 = 2;
    string field3 = 3;
    uint64 field4 = 4;
  }
  repeated int32 field1 = 1;
  repeated SubMessage field2 = 2;
  double field3 = 3;
}
